# cpp-cameras

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  makefile  readme.md
app/: CMakeLists.txt  main.cpp
docker/: .env  docker-compose.yaml
docker/stream-server/: stream-server-configuration.yaml
src/: CMakeLists.txt
src/CameraConnector/: CMakeLists.txt  CameraConnector.cpp  CameraConnector.hpp
src/FrameQueue/: CMakeLists.txt  FrameQueue.hpp
src/GStreamerPipeline/: CMakeLists.txt  GStreamerPipeline.cpp  GStreamerPipeline.hpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/MotionDetector/: CMakeLists.txt  MotionDetector.hpp
src/MotionRecorderApp/: CMakeLists.txt  MotionRecorderApp.cpp  MotionRecorderApp.hpp
src/VideoRecorder/: CMakeLists.txt  VideoRecorder.cpp  VideoRecorder.hpp
videos/: recording.avi
